--- a/.github/workflows/main_khleeresume.yml
+++ b/.github/workflows/main_khleeresume.yml
@@ -55,7 +55,9 @@ jobs:
           name: node-app
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
+        run: zip -r release.zip .next package.json package-lock.json public
+
+        # run: unzip release.zip
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -70,5 +72,5 @@ jobs:
         with:
           app-name: 'khleeResume'
           slot-name: 'Production'
-          package: .
+          package: release.zip
           
