--- a/.github/workflows/main_khleeresume.yml
+++ b/.github/workflows/main_khleeresume.yml
@@ -28,11 +28,10 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-          mv .next/static .next/standalone/.next/static
-          [ -d public ] && mv public .next/standalone/public
+        
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip .next package.json package-lock.json public
+        run: zip -r release.zip 
 
 
       - name: Upload artifact for deployment job
@@ -73,5 +72,5 @@ jobs:
         with:
           app-name: 'khleeResume'
           slot-name: 'Production'
-          package: release.zip
+          package:
           
